featureHU002: Correcion de errores en sonnar

--- a/src/app/shared/components/card-albumes/card-albumes.component.scss
+++ b/src/app/shared/components/card-albumes/card-albumes.component.scss
@@ -27,7 +27,7 @@
         padding-top: 39px;
         span {
           font-weight: bold;
-
+          font-family: Helvetica, Arial, Verdana, Tahoma, sans-serif;
           font-size: 24px;
         }
     }
@@ -39,6 +39,7 @@
       span {
         font-weight: bold;
         color: black;
+        font-family: Helvetica, Arial, Verdana, Tahoma, sans-serif;
         font-size: 16px;
       }
     }
@@ -49,6 +50,7 @@
       span {
         opacity: 100%;
         color: #000000;
+        font-family: Helvetica, Arial, Verdana, Tahoma, sans-serif;
         font-size: 16px;
       }
     }
@@ -59,6 +61,7 @@
       padding-bottom: 16px;
       span {
         color: #007BFF;
+        font-family: Helvetica, Arial, Verdana, Tahoma, sans-serif;
         font-size: 24px;
         opacity: 1;
       }
