FeatureHU02: Creacion de la vista de comenatrios

--- a/src/app/components/detail-album/detail-album.component.html
+++ b/src/app/components/detail-album/detail-album.component.html
@@ -25,7 +25,7 @@
         <button type="button" class="design-button" (click)="goBack()">Regresar</button>
       </div>
       <div class="show-comment">
-        <button type="button" class="design-button" (click)="goBack()">Ver comentarios</button>
+        <button type="button" class="design-button" (click)="checkComment()">Ver comentarios</button>
       </div>
     </div>
   </div>
