FeatureHU02: Correcion de pruebas  unitarias y cobertura de codigo

--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -25,18 +25,7 @@
     </div>
   </div>
 
-  <div class="list-comment">
-    <hr/>
-    <div class="table-title">
-      <div class="container-div">
-        <span>Contenido</span>
-      </div>
-      <div class="container-div">
-        <span>Calificacion</span>
-      </div>
-    </div>
-    <hr/>
-  </div>
+  <app-title-table [titlesTable]="titlesTable"></app-title-table>
   <div class="row-comment" *ngFor="let item of album.comments; let i = index">
     <div class="table-title">
       <div class="container-div">
