--- a/src/app/components/detail-album/detail-album.component.html
+++ b/src/app/components/detail-album/detail-album.component.html
@@ -30,21 +30,7 @@
     </div>
   </div>
 
-  <div class="list-information">
-    <hr/>
-    <div class="table-title">
-      <div class="container-div">
-        <span>Track</span>
-      </div>
-      <div class="container-div">
-        <span>Nombre</span>
-      </div>
-      <div class="container-div">
-        <span>Duracion</span>
-      </div>
-    </div>
-    <hr/>
-  </div>
+  <app-title-table [titlesTable]="titlesTable"></app-title-table>
   <div class="row-information" *ngFor="let item of album.tracks; let i = index">
     <div class="table-title">
       <div class="container-div">
