FeatureHU02: Añadi formato pipe para convertir la fecha en yyyy-mm-dd

--- a/src/app/components/detail-album/detail-album.component.html
+++ b/src/app/components/detail-album/detail-album.component.html
@@ -11,7 +11,7 @@
         <span>Artistas: {{album.recordLabel}}</span>
       </div>
       <div class="detail">
-        <span>Lanzamiento: {{album.releaseDate}} </span>
+        <span>Lanzamiento: {{album.releaseDate  | date: 'yyyy-MM-dd' }} </span>
       </div>
       <div class="detail">
         <span>Genero: {{album.genre}} </span>
