--- a/src/app/components/albumes/albumes.component.html
+++ b/src/app/components/albumes/albumes.component.html
@@ -1,3 +1,4 @@
 <div class="contenedor-principal">
+    <app-search *ngIf="getHeader()" (text)="searchText($event)"></app-search>
     <app-card-albumes [albumes]="albums" (index)="showDetailAlbum($event)"></app-card-albumes>
 </div>
