--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header [header]="getHeader()"  (index)="showItem($event)"></app-header>
-<div>
+<div class="container-app">
   <router-outlet #myOutlet="outlet">
 
   </router-outlet>
