--- a/src/app/components/collector-listar/collector-listar.component.html
+++ b/src/app/components/collector-listar/collector-listar.component.html
@@ -1,7 +1,10 @@
 <div class="container-fluid">
   <div class="row p-5">
-      <div class="col border" *ngFor= "let c of collectors">
+      <div class="col border" *ngFor= "let c of collectors" (click)="onSelected(c)">
          {{c.name}}
+      </div>
+      <div *ngIf="selected">
+        <app-collector-detail [collectorDetail]="selectedCollector"></app-collector-detail>
       </div>
   </div>
 
