FeatureHU04: se actualiza estilo de listado de artistas

--- a/src/app/components/performer-list/performer-list.component.html
+++ b/src/app/components/performer-list/performer-list.component.html
@@ -1,28 +1,41 @@
-
-<div class="container-fluid">
-  <div class="row p-5">
-
-        <div class="col " *ngFor= "let band of bands">
-          <div class="card text-center" style="width: 18rem;">
-            <img  class="image-fluid " src='{{band.image}}' width="200" alt=""/>
-          <div class="card-body">
-            <h5 class="card-title">{{band.name}}</h5>
-            <p class="card-text">Band</p>
-            <a href="#" class="btn btn-primary">Favorite</a>
-           </div>
+<div class="main-container container-fluid">
+  <div class="row">
+    <div class="container-bands col-12 col-md-6 col-lg-4">
+      <div class="co" *ngFor="let band of bands" class="detail-band" (click)="clickItem(band.id)">
+          <div class="img-driver">
+            <img src="{{band.image}}" alt="">
           </div>
-       </div>
-       <div class="col " *ngFor= "let musician of musicians">
-        <div class="card text-center" style="width: 18rem;">
-          <img class="image-responsive" src='{{musician.image}}' width="200" alt="" />
-        <div class="card-body">
-          <h5 class="card-title">{{musician.name}}</h5>
-          <p class="card-text">Musician</p>
-          <a href="#" class="btn btn-primary">Favorite</a>
-         </div>
-        </div>
+          <div class="band-name">
+            <span id="name">{{band.name}}</span>
+          </div>
+          <div class="artist-type">
+            <span>Banda</span>
+          </div>
+          <div class="fav-btn">
+            <a href="#" class="btn btn-primary">Favorite</a>
+          </div>
+      </div>
+    </div>
+
+    <div class="container-musicians  col-12 col-md-6 col-lg-4">
+      <div class="col" *ngFor="let musician of musicians" class="detail-musician" (click)="clickItem(musician.id)">
+          <div class="img-driver">
+            <img src="{{musician.image}}" alt="">
+          </div>
+          <div class="musician-name">
+            <span id="name">{{musician.name}}</span>
+          </div>
+          <div class="artist-type">
+            <span>Musician</span>
+          </div>
+          <div class="fav-btn">
+            <a href="#" class="btn btn-primary">Favorite</a>
+          </div>
+      </div>
+    </div>
   </div>
 </div>
+
 
 
 
