--- a/src/app/components/performer-list/performer-list.component.scss
+++ b/src/app/components/performer-list/performer-list.component.scss
@@ -6,9 +6,11 @@
 
 
   .container-bands {
-    display: inline;
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    max-width: 100%;
+    height: auto;
 
     .detail-band {
       background: white;
@@ -61,9 +63,11 @@
   }
 
   .container-musicians {
-    display: inline;
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    max-width: 100%;
+    height: auto;
 
     .detail-musician{
       background: white;
