--- a/src/app/components/performer-list/performer-list.component.html
+++ b/src/app/components/performer-list/performer-list.component.html
@@ -1,5 +1,10 @@
 <div class="main-container container-fluid">
+  <div *ngif="getSelected()"></div>
   <div class="row">
+    <div *ngIf="selected; else elseBlock">
+      <app-musician-detail [musicianDetail]="selectedMusician"></app-musician-detail>
+    </div>
+    <ng-template #elseBlock>
     <div class="container-bands col-12 col-md-6 col-lg-4 ">
       <div class="col" *ngFor="let band of bands" class="detail-band" (click)="clickItem(band.id)">
           <div class="img-driver">
@@ -33,9 +38,8 @@
           </div>
       </div>
     </div>
-    <div *ngIf="selected">
-      <app-musician-detail [musicianDetail]="selectedMusician"></app-musician-detail>
-    </div>
+  </ng-template>
+
   </div>
 </div>
 
