FeatureHU06: Se corrige obtencion de albumes de collecionista

--- a/src/app/components/collector-detail/collector-detail.component.html
+++ b/src/app/components/collector-detail/collector-detail.component.html
@@ -10,7 +10,7 @@
         <dd *ngFor = "let p of collectorDetail.favoritePerformers">{{p.name}}</dd>
         <hr>
         <dt>Collector Albums</dt>
-        <dd *ngFor = "let a of collectorDetail.collectorAlbums">{{a.id}}</dd>
+        <dd *ngFor = "let a of albumsCollector">{{a.name}}</dd>
       </dl>
     </div>
   </div>
