FeatureHU06: Se a;ade boton de regresar

--- a/src/app/components/collector-detail/collector-detail.component.html
+++ b/src/app/components/collector-detail/collector-detail.component.html
@@ -14,4 +14,9 @@
       </dl>
     </div>
   </div>
+  <div class="container-button">
+    <div>
+      <button type="button" class="design-button" (click)="goBack()">Regresar</button>
+    </div>
+  </div>
 </div>
