FeatureHu04: se agregan estilos a vista de detalle banda

--- a/src/app/components/band-detail/band-detail.component.html
+++ b/src/app/components/band-detail/band-detail.component.html
@@ -1,4 +1,4 @@
-<div class="container-detail-musician">
+<div class="container-detail-band">
   <div class="container-information">
     <div class="img-log">
       <img src="{{bandDetail.image}}" alt="">
@@ -11,7 +11,7 @@
         <span>{{bandDetail.description}} </span>
       </div>
       <div class="detail">
-        <span>Nacimiento: {{bandDetail.creationDate | date: 'yyyy-MM-dd'}} </span>
+        <span>Creación: {{bandDetail.creationDate }} </span>
       </div>
       <div class="detail">
         <span>Tipo de artista: Musico </span>
