--- a/src/app/components/musician-detail/musician-detail.component.html
+++ b/src/app/components/musician-detail/musician-detail.component.html
@@ -11,7 +11,7 @@
         <span>{{musicianDetail.description}} </span>
       </div>
       <div class="detail">
-        <span>Nacimiento: {{musicianDetail.birthDate | date: 'yyyy-MM-dd'}} </span>
+        <span>Nacimiento: {{musicianDetail.birthDate }} </span>
       </div>
       <div class="detail">
         <span>Tipo de artista: Musico </span>
