FeatureHU06: Se visualizan correctamente los albumes de los comentarios hechos

--- a/src/app/components/collector-detail/collector-detail.component.html
+++ b/src/app/components/collector-detail/collector-detail.component.html
@@ -31,8 +31,8 @@
       <td>
         <dd>{{c.rating}}</dd>
       </td>
-      <td>
-        <dd>{{albumesOfComments}}</dd>
+      <td *ngFor="let alb of albumesOfComments" >
+        <dd>{{alb.name}}</dd>
       </td>
   </tr>
   </tbody>
