--- a/src/app/components/collector-detail/collector-detail.component.html
+++ b/src/app/components/collector-detail/collector-detail.component.html
@@ -12,7 +12,9 @@
       </div>
     </div>
   </div>
-<h1> Comentarios hechos por {{collectorDetail.name}}</h1>
+<div class="container-fluid2">
+  <h1> Comentarios hechos por {{collectorDetail.name}}</h1>
+</div>
 
 <div class="container-fluid">
 <table class="table">
@@ -45,8 +47,10 @@
   </div>
 </div>
 
+<div class="container-fluid2">
 <h1> Artistas favoritos de {{collectorDetail.name}}</h1>
-
+</div>
+<div class="container-fluid">
 <table class="table" cellspacing="10" cellpadding="10">
   <thead>
     <tr>
@@ -65,15 +69,17 @@
   </tr>
   </tbody>
 </table>
+</div>
 
 <div class="row">
   <div class="col-12">
     <hr>
   </div>
 </div>
-
+<div class="container-fluid2">
 <h1> Albumes de {{collectorDetail.name}}</h1>
-
+</div>
+<div class="container-fluid">
 <table class="table" cellspacing="10" cellpadding="10">
   <thead>
     <tr>
@@ -92,6 +98,7 @@
   </tr>
   </tbody>
 </table>
+</div>
 
 <div class="row">
   <div class="col-12">
