FeatureHU04: se arreglan pruebas unitarias

--- a/src/app/components/performer-list/performer-list.component.html
+++ b/src/app/components/performer-list/performer-list.component.html
@@ -34,7 +34,7 @@
             <img src="{{band.image}}" alt="">
           </div>
           <div class="band-name">
-            <span id="name">{{band.name}}</span>
+            <span id="band-name">{{band.name}}</span>
           </div>
           <div class="artist-type">
             <span>Banda</span>
