--- a/reports/ut_report.xml
+++ b/reports/ut_report.xml
@@ -1,158 +1,92 @@
 <testExecutions version="1">
+  <file path="src/app/shared/services/header.service.spec.ts">
+    <testCase name="HeaderService check the method was been called" duration="17"/>
+    <testCase name="HeaderService check the data when the user has menu" duration="3"/>
+    <testCase name="HeaderService should be created" duration="2"/>
+  </file>
+  <file path="src/app/components/performer-list/performer-list.component.spec.ts">
+    <testCase name="PerformerListComponent Should have an  element band name" duration="559"/>
+    <testCase name="PerformerListComponent should create" duration="16"/>
+  </file>
+  <file path="src/app/components/comment/comment.component.spec.ts">
+    <testCase name="CommentComponent check the getDetailAlbum" duration="29"/>
+    <testCase name="CommentComponent check the navigation" duration="14"/>
+    <testCase name="CommentComponent should create" duration="12"/>
+    <testCase name="CommentComponent check the collection in data" duration="8"/>
+  </file>
+  <file path="src/app/services/albumes.service.spec.ts">
+    <testCase name="AlbumsService should be created" duration="5"/>
+    <testCase name="AlbumsService check set and get " duration="3"/>
+    <testCase name="AlbumsService check the services when is having error" duration="2"/>
+    <testCase name="AlbumsService check the success services" duration="2"/>
+  </file>
+  <file path="src/app/components/musician-detail/musician-detail.component.spec.ts">
+    <testCase name="MusicianDetailComponent should create" duration="10"/>
+  </file>
+  <file path="src/app/services/collector.service.spec.ts">
+    <testCase name="Service: Collector getCollectors() should return 10 records" duration="8"/>
+    <testCase name="Service: Collector should create service" duration="2"/>
+  </file>
   <file path="src/app/components/collector-listar/collector-listar.component.spec.ts">
-    <testCase name="CollectorListarComponent should create" duration="53"/>
+    <testCase name="CollectorListarComponent should create" duration="7"/>
+  </file>
+  <file path="src/app/services/band.service.spec.ts">
+    <testCase name="Service: Band Method getBands() should return 10 records" duration="2"/>
+  </file>
+  <file path="src/app/shared/components/card-albumes/card-albumes.component.spec.ts">
+    <testCase name="CardAlbumesComponent check the view when is the data is empty" duration="8"/>
+    <testCase name="CardAlbumesComponent check the view when is the data is not empty" duration="5"/>
+    <testCase name="CardAlbumesComponent check the view when it has data" duration="5"/>
+    <testCase name="CardAlbumesComponent should create" duration="5"/>
+    <testCase name="CardAlbumesComponent should emit index event clickItem" duration="5"/>
+  </file>
+  <file path="src/app/components/detail-album/detail-album.component.spec.ts">
+    <testCase name="DetailAlbumComponent check the navigation" duration="16"/>
+    <testCase name="DetailAlbumComponent check the getDetailAlbum" duration="8"/>
+    <testCase name="DetailAlbumComponent should create" duration="8"/>
+    <testCase name="DetailAlbumComponent check the collection in data" duration="7"/>
+  </file>
+  <file path="src/app/services/musician.service.spec.ts">
+    <testCase name="Service: Musician Method getMusicians() should return 10 records" duration="2"/>
+  </file>
+  <file path="src/app/components/band-detail/band-detail.component.spec.ts">
+    <testCase name="BandDetailComponent should create" duration="17"/>
+  </file>
+  <file path="src/app/shared/components/title-table/title-table.component.spec.ts">
+    <testCase name="TitleTableComponent check the input" duration="5"/>
+    <testCase name="TitleTableComponent should create" duration="5"/>
+  </file>
+  <file path="src/app/app.component.spec.ts">
+    <testCase name="AppComponent should create the app" duration="14"/>
+    <testCase name="AppComponent check the header size " duration="7"/>
+    <testCase name="AppComponent check the first fourth in header  " duration="6"/>
+    <testCase name="AppComponent check the first item in header  " duration="6"/>
+    <testCase name="AppComponent check the first second in header  " duration="6"/>
+    <testCase name="AppComponent should trigger click option albumes" duration="8"/>
+    <testCase name="AppComponent should trigger click option collector" duration="6"/>
+    <testCase name="AppComponent check the first third in header  " duration="8"/>
+    <testCase name="AppComponent should trigger click option performer" duration="6"/>
+  </file>
+  <file path="src/app/shared/components/header/header.component.spec.ts">
+    <testCase name="HeaderComponent Checking the view in header" duration="5"/>
+    <testCase name="HeaderComponent should create" duration="5"/>
+    <testCase name="HeaderComponent should emit index event clickItem" duration="4"/>
   </file>
   <file path="src/app/components/albumes/albumes.component.spec.ts">
-    <testCase name="AlbumesComponent check the header exists should create" duration="52"/>
-    <testCase name="AlbumesComponent check the header exists should get headers when it exists" duration="11"/>
-    <testCase name="AlbumesComponent should show all data when the text is not empty" duration="7"/>
-    <testCase name="AlbumesComponent check the albumes is not empty" duration="8"/>
-    <testCase name="AlbumesComponent should show all data when the text is empty" duration="7"/>
-    <testCase name="AlbumesComponent should create" duration="8"/>
-    <testCase name="AlbumesComponent should get headers when is not existe" duration="9"/>
-    <testCase name="AlbumesComponent should trigger click option performer" duration="10"/>
-    <testCase name="AlbumesComponent Checking the albums first name is Buscando América" duration="7"/>
+    <testCase name="AlbumesComponent check the albumes is not empty" duration="10"/>
+    <testCase name="AlbumesComponent should trigger click option performer" duration="8"/>
     <testCase name="AlbumesComponent check the first album is Salsa" duration="7"/>
+    <testCase name="AlbumesComponent should get headers when is not existe" duration="7"/>
+    <testCase name="AlbumesComponent Checking the albums first name is Buscando América" duration="6"/>
+    <testCase name="AlbumesComponent should show all data when the text is empty" duration="6"/>
+    <testCase name="AlbumesComponent should show all data when the text is not empty" duration="7"/>
+    <testCase name="AlbumesComponent should create" duration="7"/>
   </file>
   <file path="src/app/shared/components/search/search.component.spec.ts">
     <testCase name="SearchComponent should create" duration="5"/>
   </file>
-  <file path="src/app/components/performer-list/performer-list.component.spec.ts">
-    <testCase name="PerformerListComponent should create" duration="137">
-      <failure message="Error">NullInjectorError: R3InjectorError(DynamicTestModule)[Router -&gt; Router]: 
-  NullInjectorError: No provider for Router!
-error properties: Object({ ngTempTokenPath: null, ngTokenPath: [ 'Router', 'Router' ] })
-    at &lt;Jasmine&gt;
-    at NullInjector.get (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:915:1)
-    at R3Injector.get (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:11082:1)
-    at R3Injector.get (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:11082:1)
-    at NgModuleRef$1.get (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:24199:1)
-    at Object.get (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:22102:1)
-    at getOrCreateInjectable (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:3921:1)
-    at ɵɵdirectiveInject (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:13753:1)
-    at NodeInjectorFactory.PerformerListComponent_Factory [as factory] (ng:///PerformerListComponent/ɵfac.js:6:54)
-    at getNodeInjectable (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:4029:1)
-    at instantiateRootComponent (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:7826:1)
-
-Error: Expected undefined to be truthy.
-    at &lt;Jasmine&gt;
-    at UserContext.&lt;anonymous&gt; (http://localhost:9876/_karma_webpack_/src/app/components/performer-list/performer-list.component.spec.ts:56:23)
-    at ZoneDelegate.invoke (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-evergreen.js:364:1)
-    at ProxyZoneSpec.push../node_modules/zone.js/dist/zone-testing.js.ProxyZoneSpec.onInvoke (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-testing.js:292:1)
-</failure>
-    </testCase>
-    <testCase name="PerformerListComponent Should have an header element band name" duration="6">
-      <failure message="Error">NullInjectorError: R3InjectorError(DynamicTestModule)[Router -&gt; Router]: 
-  NullInjectorError: No provider for Router!
-error properties: Object({ ngTempTokenPath: null, ngTokenPath: [ 'Router', 'Router' ] })
-    at &lt;Jasmine&gt;
-    at NullInjector.get (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:915:1)
-    at R3Injector.get (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:11082:1)
-    at R3Injector.get (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:11082:1)
-    at NgModuleRef$1.get (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:24199:1)
-    at Object.get (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:22102:1)
-    at getOrCreateInjectable (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:3921:1)
-    at ɵɵdirectiveInject (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:13753:1)
-    at NodeInjectorFactory.PerformerListComponent_Factory [as factory] (ng:///PerformerListComponent/ɵfac.js:6:54)
-    at getNodeInjectable (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:4029:1)
-    at instantiateRootComponent (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:7826:1)
-
-TypeError: Cannot read property 'query' of undefined
-    at &lt;Jasmine&gt;
-    at UserContext.&lt;anonymous&gt; (http://localhost:9876/_karma_webpack_/src/app/components/performer-list/performer-list.component.spec.ts:61:18)
-    at ZoneDelegate.invoke (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-evergreen.js:364:1)
-    at ProxyZoneSpec.push../node_modules/zone.js/dist/zone-testing.js.ProxyZoneSpec.onInvoke (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-testing.js:292:1)
-    at ZoneDelegate.invoke (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-evergreen.js:363:1)
-    at Zone.run (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-evergreen.js:123:1)
-    at runInTestZone (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-testing.js:545:1)
-    at UserContext.&lt;anonymous&gt; (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-testing.js:560:1)
-    at &lt;Jasmine&gt;
-</failure>
-    </testCase>
-  </file>
-  <file path="src/app/shared/components/title-table/title-table.component.spec.ts">
-    <testCase name="TitleTableComponent check the input" duration="10"/>
-    <testCase name="TitleTableComponent should create" duration="4"/>
-  </file>
-  <file path="src/app/components/musician-detail/musician-detail.component.spec.ts">
-    <testCase name="MusicianDetailComponent should create" duration="8">
-      <failure message="Error">NullInjectorError: R3InjectorError(DynamicTestModule)[Router -&gt; Router]: 
-  NullInjectorError: No provider for Router!
-error properties: Object({ ngTempTokenPath: null, ngTokenPath: [ 'Router', 'Router' ] })
-    at &lt;Jasmine&gt;
-    at NullInjector.get (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:915:1)
-    at R3Injector.get (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:11082:1)
-    at R3Injector.get (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:11082:1)
-    at NgModuleRef$1.get (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:24199:1)
-    at Object.get (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:22102:1)
-    at getOrCreateInjectable (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:3921:1)
-    at ɵɵdirectiveInject (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:13753:1)
-    at NodeInjectorFactory.MusicianDetailComponent_Factory [as factory] (ng:///MusicianDetailComponent/ɵfac.js:5:51)
-    at getNodeInjectable (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:4029:1)
-    at instantiateRootComponent (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:7826:1)
-
-Error: Expected undefined to be truthy.
-    at &lt;Jasmine&gt;
-    at UserContext.&lt;anonymous&gt; (http://localhost:9876/_karma_webpack_/src/app/components/musician-detail/musician-detail.component.spec.ts:30:23)
-    at ZoneDelegate.invoke (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-evergreen.js:364:1)
-    at ProxyZoneSpec.push../node_modules/zone.js/dist/zone-testing.js.ProxyZoneSpec.onInvoke (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-testing.js:292:1)
-</failure>
-    </testCase>
-  </file>
-  <file path="src/app/components/detail-album/detail-album.component.spec.ts">
-    <testCase name="DetailAlbumComponent check the getDetailAlbum" duration="13"/>
-    <testCase name="DetailAlbumComponent check the navigation" duration="10"/>
-    <testCase name="DetailAlbumComponent should create" duration="7"/>
-    <testCase name="DetailAlbumComponent check the collection in data" duration="7"/>
-  </file>
-  <file path="src/app/app.component.spec.ts">
-    <testCase name="AppComponent check the first item in header  " duration="11"/>
-    <testCase name="AppComponent should trigger click option performer" duration="6"/>
-    <testCase name="AppComponent should trigger click option albumes" duration="6"/>
-    <testCase name="AppComponent should trigger click option collector" duration="6"/>
-    <testCase name="AppComponent check the header size " duration="6"/>
-    <testCase name="AppComponent should create the app" duration="5"/>
-    <testCase name="AppComponent check the first fourth in header  " duration="5"/>
-    <testCase name="AppComponent check the first second in header  " duration="6"/>
-    <testCase name="AppComponent check the first third in header  " duration="5"/>
-  </file>
-  <file path="src/app/shared/services/header.service.spec.ts">
-    <testCase name="HeaderService should be created" duration="2"/>
-    <testCase name="HeaderService check the data when the user has menu" duration="2"/>
-    <testCase name="HeaderService check the method was been called" duration="3"/>
-  </file>
-  <file path="src/app/components/comment/comment.component.spec.ts">
-    <testCase name="CommentComponent check the collection in data" duration="17"/>
-    <testCase name="CommentComponent should create" duration="8"/>
-    <testCase name="CommentComponent check the navigation" duration="7"/>
-    <testCase name="CommentComponent check the getDetailAlbum" duration="7"/>
-  </file>
-  <file path="src/app/services/collector.service.spec.ts">
-    <testCase name="Service: Collector should create service" duration="2"/>
-    <testCase name="Service: Collector getCollectors() should return 10 records" duration="5"/>
-  </file>
-  <file path="src/app/services/musician.service.spec.ts">
-    <testCase name="Service: Musician Method getMusicians() should return 10 records" duration="3"/>
-  </file>
-  <file path="src/app/services/albumes.service.spec.ts">
-    <testCase name="AlbumsService check the services when is having error" duration="5"/>
-    <testCase name="AlbumsService check set and get " duration="2"/>
-    <testCase name="AlbumsService should be created" duration="2"/>
-    <testCase name="AlbumsService check the success services" duration="2"/>
-  </file>
-  <file path="src/app/shared/components/card-albumes/card-albumes.component.spec.ts">
-    <testCase name="CardAlbumesComponent should emit index event clickItem" duration="5"/>
-    <testCase name="CardAlbumesComponent should create" duration="5"/>
-    <testCase name="CardAlbumesComponent check the view when it has data" duration="4"/>
-    <testCase name="CardAlbumesComponent check the view when is the data is not empty" duration="4"/>
-    <testCase name="CardAlbumesComponent check the view when is the data is empty" duration="4"/>
-  </file>
-  <file path="src/app/shared/components/header/header.component.spec.ts">
-    <testCase name="HeaderComponent Checking the view in header" duration="5"/>
-    <testCase name="HeaderComponent should emit index event clickItem" duration="4"/>
-    <testCase name="HeaderComponent should create" duration="4"/>
-  </file>
-  <file path="src/app/services/band.service.spec.ts">
-    <testCase name="Service: Band Method getBands() should return 10 records" duration="3"/>
+  <file path="src/app/components/albumes/albumes.component.spec.ts">
+    <testCase name="AlbumesComponent check the header exists should get headers when it exists" duration="10"/>
+    <testCase name="AlbumesComponent check the header exists should create" duration="7"/>
   </file>
 </testExecutions>
